fixed overflow error on frog page when id is too large, other minor tweaks

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,7 @@ body {
     font-family: "Cormorant garamond", sans-serif;
     font-weight: 300;
     background: url("background.jpg") center/cover fixed no-repeat;
-    color:rgb(255, 255, 255);
+    color:#ffffff;
     
     /**make sure footer stays at bottom 
     https://dev.to/nehalahmadkhan/how-to-make-footer-stick-to-bottom-of-web-page-3i14- **/
@@ -151,7 +151,7 @@ nav a:hover::before {
 
 .footer {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(26, 26, 26);
+    background-color: #1a1a1a;
     text-align: center;
     margin: 0;
     margin-top: auto; /**make sure footer stays at bottom**/
@@ -249,7 +249,7 @@ nav a:hover::before {
 for all_frogs and search results pages**/
 
 .grid-item {
-  background-color: rgb(43, 43, 43);
+  background-color: #2b2b2b;
   text-align: center;
   transition: all ease-in-out 250ms;
   height: 380px;
@@ -394,7 +394,7 @@ for all_frogs and search results pages**/
     padding-top: 40px;
     width: 100%;
     height: 100%;
-    background-color: rgb(43, 43, 43);
+    background-color: #2b2b2b;
 }
 
 .input_container h3 {
@@ -417,7 +417,7 @@ for all_frogs and search results pages**/
 .discover {
     width: 60%;
     margin: 0 ;
-    color: white;
+    color: #ffffff;
 }
 
 .random_frog_item img {
@@ -434,7 +434,7 @@ for all_frogs and search results pages**/
 
 .random_frog_item {
     width: 30%;
-    background-color: rgb(43, 43, 43); 
+    background-color: #2b2b2b; 
     transition: all ease-in-out 250ms;
 }
 
@@ -474,5 +474,6 @@ for all_frogs and search results pages**/
 ----------------------------------------------------------------------**/
 
 .about {
-    padding: 0 8%;
+    padding: 0 20% 0 8%;
+    line-height: 1.8;
 }
